--- a/cpu.html
+++ b/cpu.html
@@ -12,14 +12,17 @@
 </header>
 
 <nav>
-  <a href = "home.html">Home</a> &nbsp
-  <a href = "cpu.html">CPU</a> &nbsp
-  <a href = "motherboard.html">Motherboard</a> &nbsp
-  <a href = "ram.html">RAM</a> &nbsp
-  <a href = "gpu.html">GPU</a> &nbsp
-  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
-  <a href = "psu.html">PSU</a> &nbsp
-  <a href = "sampleBuilds.html">Sample Builds</a>
+  <ul>
+    <li><a href = "home.html">Home</a></li>
+    <li><a class = "currentnav" href = "cpu.html">CPU</a></li>
+    <li><a href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+    <li><a href = "sampleBuilds.html">Sample Builds</a></li>
+    <li><a href = "contactMe.html">Contact Me</a></li>
+  <ul>
 </nav>
   <div id = "wrapper">
 <main>
@@ -57,18 +60,8 @@
 <h2>The Brands of CPU</h2>
 <p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
 and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
-powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! I have provided a helpful table showing pros of both CPU brands.</p>
-
-<table id = "css/cpuTable">
-  <tr>
-    <th>Intel</th>
-    <th>AMD</th>
-  </tr>
-  <tr>
-    <th></th>
-    <th>Generally cheaper than Intel Processors</th>
-  </tr>
-</table>
+powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! There are pros and cons to each one, so just make sure you research properly! I would
+personally recommend a Intel CPU though. 
 
 <h2>Popular Choices</h2>
 <dl>
@@ -87,7 +80,9 @@ powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD
 </dl>
 </main>
 <footer>
-  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
+    <br>
+    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
 
 </div>
