--- a/gpu.html
+++ b/gpu.html
@@ -11,14 +11,17 @@
 </header>
 
 <nav>
-  <a href = "home.html">Home</a> &nbsp
-  <a href = "cpu.html">CPU</a> &nbsp
-  <a href = "motherboard.html">Motherboard</a> &nbsp
-  <a href = "ram.html">RAM</a> &nbsp
-  <a href = "gpu.html">GPU</a> &nbsp
-  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
-  <a href = "psu.html">PSU</a> &nbsp
-  <a href = "sampleBuilds.html">Sample Builds</a>
+  <ul>
+    <li><a href = "home.html">Home</a></li>
+    <li><a href = "cpu.html">CPU</a></li>
+    <li><a href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a class = "currentnav" href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+    <li><a href = "sampleBuilds.html">Sample Builds</a></li>
+    <li><a href = "contactMe.html">Contact Me</a></li>
+  <ul>
 </nav>
   <div id = "wrapper">
 <main>
@@ -34,7 +37,9 @@
     to wait for your PC to render videos and the smoother your video editing process will be.
 
     <br><br>
-    Like the CPU, the GPU can also be
+    Like the CPU, the GPU can also be overclocked! This will increase the performance of your GPU and will most likely increase the FPS in gaming, and let you process faster for videos.
+    When you overclock though, the CPU can become very hot, so be careful! If you consider overclocking your GPU, I would recommend getting a GPU with a lot of fans so it can keep
+    itself cool. 
 
   <br><br>
     In today's market, two companies dominate the GPU market: NVIDIA and AMD. Currently, NVIDIA has their 2000's series of graphics cards, while AMD has their Radeon and Vega series.
