--- a/home.html
+++ b/home.html
@@ -12,14 +12,17 @@
   <h1> PC Parts Explained </h1>
 </header>
 <nav>
-  <a href = "home.html">Home</a> &nbsp
-  <a href = "cpu.html">CPU</a> &nbsp
-  <a href = "motherboard.html">Motherboard</a> &nbsp
-  <a href = "ram.html">RAM</a> &nbsp
-  <a href = "gpu.html">GPU</a> &nbsp
-  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
-  <a href = "psu.html">PSU</a> &nbsp
-  <a href = "sampleBuilds.html">Sample Builds</a>
+  <ul>
+    <li><a class = "currentnav" href = "home.html">Home</a></li>
+    <li><a href = "cpu.html">CPU</a></li>
+    <li><a href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+    <li><a href = "sampleBuilds.html">Sample Builds</a></li>
+    <li><a href = "contactMe.html">Contact Me</a></li>
+  <ul>
 </nav>
   <div id = "wrapper">
 <main>
@@ -28,20 +31,16 @@
     I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
     deem a part and how much I recommend spending on it, current popular parts, and will give some sample builds!
   <br><br>I will be going over the following parts in detail:
-  <ul>
-    <li><a href = "cpu.html">CPU</a></li>
-    <li><a href = "motherboard.html">Motherboard</a></li>
-    <li><a href = "ram.html">RAM</a></li>
-    <li><a href = "gpu.html">GPU</a></li>
-    <li><a href = "sddhdd.html">SDD/HDD</a></li>
-    <li><a href = "psu.html">PSU</a></li>
-  </ul>
+
+<br><br>
   PLEASE NOTE I will be providing my own perspective on each part of the PC, but that doesn't mean my word should be taken as law! I want this website to be a
   hub of information for beginner PC builders to reference, but this website should be used to learn the basics of PC parts. I recommend extending your knowledege
   of PCs by doing extended research!</p>
 </main>
 <footer>
-  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
+    <br>
+    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
 </div>
 </body>
