--- a/motherboard.html
+++ b/motherboard.html
@@ -12,14 +12,17 @@
 </header>
 
 <nav>
-  <a href = "home.html">Home</a> &nbsp
-  <a href = "cpu.html">CPU</a> &nbsp
-  <a href = "motherboard.html">Motherboard</a> &nbsp
-  <a href = "ram.html">RAM</a> &nbsp
-  <a href = "gpu.html">GPU</a> &nbsp
-  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
-  <a href = "psu.html">PSU</a> &nbsp
-  <a href = "sampleBuilds.html">Sample Builds</a>
+  <ul>
+    <li><a href = "home.html">Home</a></li>
+    <li><a href = "cpu.html">CPU</a></li>
+    <li><a class = "currentnav" href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+    <li><a href = "sampleBuilds.html">Sample Builds</a></li>
+    <li><a href = "contactMe.html">Contact Me</a></li>
+  <ul>
 </nav>
   <div id = "wrapper">
 <main>
@@ -48,7 +51,9 @@
 
 </main>
 <footer>
-  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
+    <br>
+    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
 
 </div>
