--- a/sampleBuilds.html
+++ b/sampleBuilds.html
@@ -12,20 +12,85 @@
 </header>
 
 <nav>
-  <a href = "home.html">Home</a> &nbsp
-  <a href = "cpu.html">CPU</a> &nbsp
-  <a href = "motherboard.html">Motherboard</a> &nbsp
-  <a href = "ram.html">RAM</a> &nbsp
-  <a href = "gpu.html">GPU</a> &nbsp
-  <a href = "sddhdd.html">SDD/HDD</a> &nbsp
-  <a href = "psu.html">PSU</a> &nbsp
-  <a href = "sampleBuilds.html">Sample Builds</a>
+  <ul>
+    <li><a href = "home.html">Home</a></li>
+    <li><a href = "cpu.html">CPU</a></li>
+    <li><a href = "motherboard.html">Motherboard</a></li>
+    <li><a href = "ram.html">RAM</a></li>
+    <li><a href = "gpu.html">GPU</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "psu.html">PSU</a></li>
+    <li><a class = "currentnav" href = "sampleBuilds.html">Sample Builds</a></li>
+    <li><a href = "contactMe.html">Contact Me</a></li>
+  <ul>
 </nav>
   <div id = "wrapper">
 <main>
+  <h2>Three Sample Builds</h2>
+  <div class = "threerow">
+  <div class="threecolumn">
+    <h2>$1000+ Intel Build</h2>
+      <dl>
+        <dt><span class = "popular">CPU: Intel i5 8600k</span></dt>
+        <br>
+        <dt><span class = "popular">Motherboard: Prime Z370-A</dt>
+          <br>
+        <dt><span class = "popular">RAM: Corsair Vengence LPX 16GB (2x8GB)</dt>
+          <br>
+        <dt><span class = "popular">GPU: NVIDIA GTX 2070</dt>
+          <br>
+        <dt><span class = "popular">SSD: Samsung 850 EVO 250GB</dt>
+          <br>
+        <dt><span class = "popular">HDD: Western Digital WD Blue 1TB</dt>
+          <br>
+        <dt><span class = "popular">PSU: EVGA 750 Gold Quality PSU</dt>
+          <br>
+      </dl>
+  </div>
+  <div class="threecolumn">
+    <h2>Budget AMD Build</h2>
+    <dl>
+      <dt><span class = "popular">CPU: AMD Ryzen 5 1600</span></dt>
+      <br>
+      <dt><span class = "popular">Motherboard: Gigabyte Gaming 3</dt>
+        <br>
+      <dt><span class = "popular">RAM: Corsair Vengence LPX 16GB (2x8GB)</dt>
+        <br>
+      <dt><span class = "popular">GPU: NVIDIA GTX 2060</dt>
+        <br>
+      <dt><span class = "popular">SSD: Samsung 850 EVO 250GB</dt>
+        <br>
+      <dt><span class = "popular">HDD: Western Digital WD Blue 1TB</dt>
+        <br>
+      <dt><span class = "popular">PSU: EVGA 750 Gold Quality PSU</dt>
+        <br>
+    </dl>
+  </div>
+  <div class="threecolumn">
+    <h2>High Spec Intel Build</h2>
+    <dl>
+      <dt><span class = "popular">CPU: Intel i7 9700K</span></dt>
+      <br>
+      <dt><span class = "popular">Motherboard: ASRock Z390 pro</dt>
+        <br>
+      <dt><span class = "popular">RAM: Corsair Vengence LPX 16GB (2x8GB) x2</dt>
+        <br>
+      <dt><span class = "popular">GPU: NVIDIA GTX 2080</dt>
+        <br>
+      <dt><span class = "popular">SSD: Samsung 850 EVO 1TB</dt>
+        <br>
+      <dt><span class = "popular">HDD: Western Digital Blue 3TB</dt>
+        <br>
+      <dt><span class = "popular">PSU: EVGA 750 Gold Quality PSU</dt>
+        <br>
+    </dl>
+  </div>
+</div>
 </main>
 <footer>
-  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu </p>
+  <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
+    <br>
+    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
 
 </div>
