--- a/contactMe.html
+++ b/contactMe.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title>The SSD/HDD</title>
+<title> PC Parts Explained </title>
 <meta charset = "utf-8">
 <link rel="stylesheet" href="css/web.css">
 </head>
-
 <body>
 <header>
-    <h1> PC Parts Explained </h1>
+  <h1> PC Parts Explained </h1>
 </header>
-
 <nav>
   <ul>
     <li><a href = "home.html">Home</a></li>
@@ -18,31 +16,35 @@
     <li><a href = "motherboard.html">Motherboard</a></li>
     <li><a href = "ram.html">RAM</a></li>
     <li><a href = "gpu.html">GPU</a></li>
-    <li><a class = "currentnav" href = "sddhdd.html">SDD/HDD</a></li>
+    <li><a href = "sddhdd.html">SDD/HDD</a></li>
     <li><a href = "psu.html">PSU</a></li>
     <li><a href = "sampleBuilds.html">Sample Builds</a></li>
-    <li><a href = "contactMe.html">Contact Me</a></li>
+    <li><a class = "currentnav" href = "contactMe.html">Conact Me</a></li>
   <ul>
 </nav>
   <div id = "wrapper">
 <main>
-  <h2>The SSD/HDD </h2>
-  <p>The Solid State Drive (SSD) and Hard Disk Drive (HDD) will act as primary storage units for your PC's data.
-     The bare minimum you need for storage would just be an HDD, SSD's are seen as an luxury part. Yet, I would
-     recommend that you have both: an HDD that will hold the bulk of information you want to save, and an SSD which will hold
-     all of the programs that you will frequently use.
-
-     <br><br>
-     I have provided a table showing the pros and cons for having an SSD versus an HDD.
-
-   </p>
+  <h2>Contact Me</h2>
+  <form action="/my-handling-form-page" method="post">
+    <div>
+      <label for="name">First Name</label>
+      <input type="text" id="name" name="user_name">
+    </div>
+    <div>
+      <label for="mail">E-mail:</label>
+      <input type="email" id="mail" name="user_mail">
+    </div>
+    <div>
+      <label for="msg">Message:</label>
+      <textarea id="msg" name="user_message"></textarea>
+    </div>
+  </form>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
     <br>
     <span class = "updateinfo">Website last updated April 23, 2019</span></p>
 </footer>
-
 </div>
 </body>
 </html>
