--- a/cpu.html
+++ b/cpu.html
@@ -3,6 +3,7 @@
 <head>
 <title>The CPU</title>
 <meta charset = "utf-8">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
 </head>
 
@@ -61,7 +62,7 @@
 <p>When considering a CPU, there a two large brands in CPU production: <b>Intel</b> and <b>AMD</b>. These two brands have controlled the market of CPUs for a very long time,
 and will primarily be the ones availble for purchase at retail stores and online. It has been generally noted by the Internet that Intel CPUs are much more
 powerful than AMD ones, but that doesn't mean that you shouldn't consider an AMD CPU! There are pros and cons to each one, so just make sure you research properly! I would
-personally recommend a Intel CPU though. 
+personally recommend a Intel CPU though.
 
 <h2>Popular Choices</h2>
 <dl>
