--- a/gpu.html
+++ b/gpu.html
@@ -3,6 +3,7 @@
 <head>
 <title>The GPU</title>
 <meta charset = "utf-8">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
 </head>
 <body>
@@ -39,7 +40,7 @@
     <br><br>
     Like the CPU, the GPU can also be overclocked! This will increase the performance of your GPU and will most likely increase the FPS in gaming, and let you process faster for videos.
     When you overclock though, the CPU can become very hot, so be careful! If you consider overclocking your GPU, I would recommend getting a GPU with a lot of fans so it can keep
-    itself cool. 
+    itself cool.
 
   <br><br>
     In today's market, two companies dominate the GPU market: NVIDIA and AMD. Currently, NVIDIA has their 2000's series of graphics cards, while AMD has their Radeon and Vega series.
