--- a/sddhdd.html
+++ b/sddhdd.html
@@ -3,6 +3,7 @@
 <head>
 <title>The SSD/HDD</title>
 <meta charset = "utf-8">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
 </head>
 
@@ -34,6 +35,38 @@
 
      <br><br>
      I have provided a table showing the pros and cons for having an SSD versus an HDD.
+
+     <table>
+       <tr>
+         <td></td><td align = "center">Pros</td><td align = "center">Cons</td>
+       </tr>
+        <td>SSD</td>
+        <td>- Faster run times. Computer will boot up in seconds.
+          <br>
+          - Less prone to data deletions, failures, etc.
+          <br>
+          - Less noisy than HDD.
+        </td>
+        <td>
+          - More expensive per gigabyte of data to an HDD.
+          <br>
+          - Due to expenses, may not be suitable as primary storage.
+       <tr>
+         <td>HDD</td>
+         <td> - Less expensive per gigabyte of data to an SSD.
+           <br>
+           - Greater base storage capacity
+           <br>
+           - More accessible in the market
+         </td>
+         <td> - Can be fragile, slight damage can delete data.
+           <br>
+           - Slower run times. Computer can take up to 20 seconds to boot up with one.
+           <br>
+           - Can get very noisy.
+         </td>
+       </tr>
+     </table>
 
    </p>
 </main>
