--- a/contactMe.html
+++ b/contactMe.html
@@ -4,6 +4,7 @@
 <title> PC Parts Explained </title>
 <meta charset = "utf-8">
 <link rel="stylesheet" href="css/web.css">
+<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <header>
@@ -19,26 +20,34 @@
     <li><a href = "sddhdd.html">SDD/HDD</a></li>
     <li><a href = "psu.html">PSU</a></li>
     <li><a href = "sampleBuilds.html">Sample Builds</a></li>
-    <li><a class = "currentnav" href = "contactMe.html">Conact Me</a></li>
+    <li><a class = "currentnav" href = "contactMe.html">Contact Me</a></li>
   <ul>
 </nav>
   <div id = "wrapper">
 <main>
   <h2>Contact Me</h2>
-  <form action="/my-handling-form-page" method="post">
-    <div>
-      <label for="name">First Name</label>
-      <input type="text" id="name" name="user_name">
-    </div>
-    <div>
-      <label for="mail">E-mail:</label>
-      <input type="email" id="mail" name="user_mail">
-    </div>
-    <div>
-      <label for="msg">Message:</label>
-      <textarea id="msg" name="user_message"></textarea>
-    </div>
-  </form>
+  <form action = "myContact" method= "post">
+
+      <div>
+      <label for="myFName">Name:</label>
+      <input type="text" id="Name" name="userName" required> </p>
+      </div>
+
+      <div>
+      <label for="myEmail">E-Mail:</label>
+      <input type="email" id="Email" name="userEmail"required> </p>
+      </div>
+
+      <div>
+      <label for="Comments">Comments:</label>
+      <textarea name="Comments" id="Comments" rows="8" cols="40" required></textarea></p>
+      </div>
+
+      <div class = "button">
+        <button type = "submit">Submit</button>
+        </div>
+
+ </form>
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
