--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 <head>
 <title> PC Parts Explained </title>
 <meta charset = "utf-8">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
 </head>
 <body>
