--- a/psu.html
+++ b/psu.html
@@ -3,6 +3,7 @@
 <head>
 <title>The PSU</title>
 <meta charset = "utf-8">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
 </head>
 
