--- a/cpu.html
+++ b/cpu.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+  <img class = "picture" src = "img/CPU.jpg">
   <h2>The CPU</h2>
   <p>The CPU (Central Processing Unit), it a very important part as it acts as the brain of the PC.
     The CPU is integral to the PC, as it performs actions, runs programs, and constantly sends instructions to other parts of the PC.
