--- a/gpu.html
+++ b/gpu.html
@@ -26,6 +26,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "picture" src = "img/GPU.jpg">
   <h2>The GPU</h2>
   <p>The Graphics Processing Unit (GPU) is part of your PC that will render visual aspects of the PC. It will render videos and graphics on your PC. The GPU works
     alongside the CPU with processing these videos and graphics. The CPU sends instructions to the GPU on how to show these graphics on a computer screen.
