--- a/home.html
+++ b/home.html
@@ -32,6 +32,13 @@
     I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
     deem a part and how much I recommend spending on it, current popular parts, and will give some sample builds!
   <br><br>I will be going over the following parts in detail:
+<br> - <a href = "cpu.html">The CPU</a>
+<br> - <a href = "motherboard.html">The Motherboard</a>
+<br> - <a href = "ram.html">The RAM</a>
+<br> - <a href = "gpu.html">The GPU</a>
+<br> - <a href = "sddhdd.html">The SDD and HDD</a>
+<br> - <a href = "psu.html">and the PSU </a>
+
 
 <br><br>
   PLEASE NOTE I will be providing my own perspective on each part of the PC, but that doesn't mean my word should be taken as law! I want this website to be a
