--- a/motherboard.html
+++ b/motherboard.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "picture" src = "img/MOTHERBOARD.jpg">
   <h2>The Motherboard</h2>
       The motherboard acts as the hub for all your pc parts: it allows them to communicate with one another.
       Your motherboard will be fitted into your PC case, and all of the parts will be connected to it in some way.
