--- a/psu.html
+++ b/psu.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "picture" src = "img/PSU.jpg">
   <h2>The PSU</h2>
   <p>
     The Power Supply Unit (PSU) somewhat acts like the battery for the PC. The PSU takes the electricity from an outlet and supplies the parts of the
