--- a/ram.html
+++ b/ram.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "picture" src = "img/RAM.jpg">
   <h2>The RAM</h2>
   <p>
     Random Access Memory (RAM) acts as short term data storage for your PC. It allows you to do the everyday tasks
