--- a/sampleBuilds.html
+++ b/sampleBuilds.html
@@ -5,7 +5,14 @@
 <meta charset = "utf-8">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="css/web.css">
+<script type = "text/javascript">
+  alert("Thank you for checking out my sample builds! I didn't include a case because that is up to your own discretion.");
+  window.onbeforeunload = function(){
+    return 'Remember to research the parts before buying!';
+  };
+  </script>
 </head>
+
 
 <body>
 <header>
