--- a/sddhdd.html
+++ b/sddhdd.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "picture" src = "img/SSD.jpg">
   <h2>The SSD/HDD </h2>
   <p>The Solid State Drive (SSD) and Hard Disk Drive (HDD) will act as primary storage units for your PC's data.
      The bare minimum you need for storage would just be an HDD, SSD's are seen as an luxury part. Yet, I would
