--- a/home.html
+++ b/home.html
@@ -27,6 +27,7 @@
 </nav>
   <div id = "wrapper">
 <main>
+    <img class = "gif" src = "img/PC.gif">
   <h2>Welcome</h2>
   <p>Welcome to PC Parts Explained! This website is intended for people who are interested in building their first PC, but lack the technical knowledege to feel confident in doing so.
     I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
