made css changes

--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
-<!--Aaron Espere (gb1962). This is the homepage of the website
-  it has _______-->
+<!--Aaron Espere (gb1962). This is this is the homepage of the website. Here, I will be explaining
+the purpose of the website, have a site map of all the possible pages that can be visited
+and disclaimer notices-->
 <!DOCTYPE html>
 <html lang = "en">
 <head>
@@ -12,7 +13,9 @@
 <header>
   <h1> PC Parts Explained </h1>
 </header>
-<nav>
+<!--navigation is done in an unordered list
+* assigned to navlist class, which custom changes navigation to a block format-->
+<nav id = "navlist">
   <ul>
     <li><a class = "currentnav" href = "home.html">Home</a></li>
     <li><a href = "cpu.html">CPU</a></li>
@@ -23,7 +26,7 @@
     <li><a href = "psu.html">PSU</a></li>
     <li><a href = "sampleBuilds.html">Sample Builds</a></li>
     <li><a href = "contactMe.html">Contact Me</a></li>
-  <ul>
+  </ul>
 </nav>
   <div id = "wrapper">
 <main>
@@ -33,13 +36,14 @@
     I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
     deem a part and how much I recommend spending on it, current popular parts, and will give some sample builds!
   <br><br>I will be going over the following parts in detail:
-<br> - <a href = "cpu.html">The CPU</a>
-<br> - <a href = "motherboard.html">The Motherboard</a>
-<br> - <a href = "ram.html">The RAM</a>
-<br> - <a href = "gpu.html">The GPU</a>
-<br> - <a href = "sddhdd.html">The SDD and HDD</a>
-<br> - <a href = "psu.html">and the PSU </a>
-
+  <ul>
+    <li><a href = "cpu.html">The CPU</a></li>
+    <li><a href = "motherboard.html">The Motherboard</a></li>
+    <li><a href = "ram.html">The RAM</a></li>
+    <li><a href = "gpu.html">The GPU</a></li>
+    <li><a href = "sddhdd.html">The SDD and HDD</a></li>
+    <li><a href = "psu.html">and the PSU </a></li>
+  </ul>
 
 <br><br>
   PLEASE NOTE I will be providing my own perspective on each part of the PC, but that doesn't mean my word should be taken as law! I want this website to be a
@@ -49,7 +53,7 @@
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
     <br>
-    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
+    <span class = "updateinfo">Website last updated April 27, 2019</span></p>
 </footer>
 </div>
 </body>
