--- a/sddhdd.html
+++ b/sddhdd.html
@@ -12,7 +12,7 @@
     <h1> PC Parts Explained </h1>
 </header>
 
-<nav>
+<nav id = "navlist">
   <ul>
     <li><a href = "home.html">Home</a></li>
     <li><a href = "cpu.html">CPU</a></li>
@@ -74,7 +74,7 @@
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
     <br>
-    <span class = "updateinfo">Website last updated April 23, 2019</span></p>
+    <span class = "updateinfo">Website last updated April 27, 2019</span></p>
 </footer>
 
 </div>
