--- a/contactMe.html
+++ b/contactMe.html
@@ -10,7 +10,7 @@
 <header>
   <h1> PC Parts Explained </h1>
 </header>
-<nav>
+<nav id = "navlist">
   <ul>
     <li><a href = "home.html">Home</a></li>
     <li><a href = "cpu.html">CPU</a></li>
