--- a/home.html
+++ b/home.html
@@ -30,11 +30,18 @@ and disclaimer notices-->
 </nav>
   <div id = "wrapper">
 <main>
-    <img class = "gif" src = "img/PC.gif">
+  <div class = "gif">
+    <img src = "img/PC.gif"></img>
+    <caption id = "gifcaption">gif provided by corsair gaming</caption>
+  </div>
+    <!--Explanation of the purpose of the website-->
   <h2>Welcome</h2>
-  <p>Welcome to PC Parts Explained! This website is intended for people who are interested in building their first PC, but lack the technical knowledege to feel confident in doing so.
-    I will be explaining in laymans terms the functionality of the part, and how it will affect the whole PC. I will also provide my perspective on the individual part: how important I
-    deem a part and how much I recommend spending on it, current popular parts, and will give some sample builds!
+  <p>Welcome to PC Parts Explained! I made this website for people who are interested in their first PC, but don't really
+    know where to start. I'll be explaining in laymans terms the functionality of the part, and how it works with the
+    whole PC. I will also providing my perspective on the individual part, like how important I think the part is,
+    and how much you should be spending on it based on your budget! I will also give some sample builds.
+
+<!--List that provides pictures of the PC parts which link internally to the other pages-->
   <br><br>I will be going over the following parts in detail:
   <ul>
     <li><a href = "cpu.html">The CPU</a></li>
@@ -45,10 +52,11 @@ and disclaimer notices-->
     <li><a href = "psu.html">and the PSU </a></li>
   </ul>
 
-<br><br>
-  PLEASE NOTE I will be providing my own perspective on each part of the PC, but that doesn't mean my word should be taken as law! I want this website to be a
-  hub of information for beginner PC builders to reference, but this website should be used to learn the basics of PC parts. I recommend extending your knowledege
-  of PCs by doing extended research!</p>
+<br>
+  PLEASE NOTE: I will provide my perspective on each part of the PC, but that doesn't mean that you should be following
+  my word to build your own PC! I want this website to serve as a hub of information for beginner PC builders to reference
+  as they research parts for their PC. This website should be used to learn the basics of PC parts, I recommend you extend
+  your knowledge of PCs by doing extended research!
 </main>
 <footer>
   <p>Have any questions? Email me at <a href = "mailto:gb1962@wayne.edu">gb1962@wayne.edu</a>
