--- a/sddhdd.html
+++ b/sddhdd.html
@@ -35,7 +35,8 @@
      all of the programs that you will frequently use.
 
      <br><br>
-     I have provided a table showing the pros and cons for having an SSD versus an HDD.
+     Here is a table providing a comparison between the two: showing the pros and cons for having an
+     SSD versus an HDD.
 
      <table>
        <tr>
